--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,9 @@ numpy
 scipy
 sympy
 sklearn
-python2latex
+python2latex==0.3.0
 xlrd
+git+https://github.com/GRAAL-Research/graal-utils
+pandas
+seaborn
+colorama
