--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ numpy
 scipy
 sympy
 python2latex>=0.4.0
+colorspacious
 xlrd
 git+https://github.com/GRAAL-Research/graal-utils
 pandas
 seaborn
 colorama
 sklearn
+git+https://github.com/jsleb333/hypergeometric_tail_inversion#hypergeo
