--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
+git+https://github.com/jsleb333/hypergeometric_tail_inversion#hypergeo
+git+https://github.com/GRAAL-Research/graal-utils.git
 numpy
 scipy
 sympy
 python2latex>=0.4.0
 colorspacious
 xlrd
-git+https://github.com/GRAAL-Research/graal-utils
 pandas
 seaborn
 colorama
 sklearn
-git+https://github.com/jsleb333/hypergeometric_tail_inversion#hypergeo
